--- a/Servlet_app/src/main/webapp/User.html
+++ b/Servlet_app/src/main/webapp/User.html
@@ -3,95 +3,58 @@
 <head>
 <meta charset="UTF-8">
 <title>Login Page</title>
-<style>
-    body {
-        background-color: #f0f2f5;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: 'Segoe UI', Tahoma, sans-serif;
-    }
-    .form-container {
-        background: #fff;
-        padding: 20px 25px;
-        border-radius: 10px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-        width: 300px;
-    }
-    h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        color: #222;
-        font-size: 18px;
-        font-weight: 600;
-    }
-    label {
-        display: block;
-        margin-top: 10px;
-        font-size: 13px;
-        font-weight: 600;
-        color: #444;
-    }
-    input {
-        width: 95%;
-        padding: 8px;
-        margin-top: 4px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 14px;
-        transition: border-color 0.2s ease;
-    }
-    input:focus {
-        border-color: #4CAF50;
-        outline: none;
-    }
-    .btn {
-        width: 100%;
-        padding: 9px;
-        margin-top: 12px;
-        font-size: 14px;
-        cursor: pointer;
-        border: none;
-        border-radius: 5px;
-        color: white;
-        transition: background 0.3s ease;
-    }
-    .btn-submit {
-        background: #4CAF50;
-    }
-    .btn-submit:hover {
-        background: #45a049;
-    }
-    .btn-view {
-        background: #2196F3;
-    }
-    .btn-view:hover {
-        background: #1976D2;
-    }
-</style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light d-flex justify-content-center align-items-center vh-100">
 
-<div class="form-container">
-    <h2>Registration / Login</h2>
+<div class="card p-4 shadow-sm" style="width: 350px;">
+    <h4 class="mb-4 text-center">Registration / Login</h4>
 
-    <form action="UserController" method="post">
-        <label >Username</label>
-        <input type="text" id="username" name="username" >
+    <!-- One form that changes action dynamically -->
+    <form id="mainForm" method="post">
+        <div class="mb-3">
+            <label class="form-label">Username</label>
+            <input type="text" class="form-control" name="username" required>
+        </div>
 
-        <label >Password</label>
-        <input type="password" id="password" name="password" >
+        <div class="mb-3">
+            <label class="form-label">Password</label>
+            <input type="password" class="form-control" name="password" required>
+        </div>
 
-        <button type="submit" class="btn btn-submit">Submit</button>
-    </form>
+        <div class="mb-3">
+            <label class="form-label">Role</label>
+            <select class="form-select" name="role" required>
+                <option value="Admin">Admin</option>
+                <option value="Customer">Customer</option>
+            </select>
+        </div>
 
-    <form action="UserController" method="get">
-        <input type="hidden" name="action" value="viewAll">
-        <button type="submit" class="btn btn-view">View All Users</button>
+        <div class="mb-3">
+            <label class="form-label">Theme</label>
+            <select class="form-select" name="theme" required>
+                <option value="Green">Green</option>
+                <option value="Blue">Blue</option>
+            </select>
+        </div>
+
+        <!-- Buttons that change where the form goes -->
+        <button type="submit" class="btn btn-primary w-100 mb-2"
+                onclick="submitForm('UserCheckController')">submit</button>
+
+        <button type="submit" class="btn btn-secondary w-100 mb-2"
+                onclick="submitForm('UserController?action=viewAll')">View All Users</button>
+
+        <button type="submit" class="btn btn-secondary w-100"
+                onclick="submitForm('UserController?action=addNew')">Add New User</button>
     </form>
 </div>
+
+<script>
+function submitForm(actionUrl) {
+    document.getElementById('mainForm').action = actionUrl;
+}
+</script>
 
 </body>
 </html>
