--- a/Servlet_app/src/main/webapp/User.html
+++ b/Servlet_app/src/main/webapp/User.html
@@ -10,21 +10,20 @@
 <div class="card p-4 shadow-sm" style="width: 350px;">
     <h4 class="mb-4 text-center">Registration / Login</h4>
 
-    <!-- One form that changes action dynamically -->
     <form id="mainForm" method="post">
         <div class="mb-3">
             <label class="form-label">Username</label>
-            <input type="text" class="form-control" name="username" required>
+            <input type="text" class="form-control" name="username" >
         </div>
 
         <div class="mb-3">
             <label class="form-label">Password</label>
-            <input type="password" class="form-control" name="password" required>
+            <input type="password" class="form-control" name="password" >
         </div>
 
         <div class="mb-3">
             <label class="form-label">Role</label>
-            <select class="form-select" name="role" required>
+            <select class="form-select" name="role" >
                 <option value="Admin">Admin</option>
                 <option value="Customer">Customer</option>
             </select>
@@ -32,13 +31,12 @@
 
         <div class="mb-3">
             <label class="form-label">Theme</label>
-            <select class="form-select" name="theme" required>
+            <select class="form-select" name="theme" >
                 <option value="Green">Green</option>
                 <option value="Blue">Blue</option>
             </select>
         </div>
 
-        <!-- Buttons that change where the form goes -->
         <button type="submit" class="btn btn-primary w-100 mb-2"
                 onclick="submitForm('UserCheckController')">submit</button>
 
